Add independently matched tooltip decorations in version 1.5